updated matrix extraction

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cfl = { git = "https://github.com/wyatt-A/cfl.git", features = ["linalg-mkl-static"] }
+cfl = { git = "https://github.com/wyatt-A/cfl.git", features = ["linalg-mkl-static", "nifti-dump"] }
 
 [build-dependencies]
 bindgen = "0.71.1"
