--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 cfl = { git = "https://github.com/wyatt-A/cfl.git", features = ["linalg-mkl-static", "nifti-dump"] }
+rand = "0.9.0"
+rayon = "1.10.0"
 
 [build-dependencies]
 bindgen = "0.71.1"
