--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,13 @@ edition = "2021"
 [dependencies]
 byteorder = "1.5.0"
 cfl = { git = "https://github.com/wyatt-A/cfl.git", features = ["linalg-mkl-static", "nifti-dump"] }
+clap = { version = "4.5.29", features = ["derive"] }
 glob = "0.3.2"
 rand = "0.9.0"
 rayon = "1.10.0"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.138"
+toml = "0.8.20"
 
 [build-dependencies]
 bindgen = "0.71.1"
