--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 byteorder = "1.5.0"
 cfl = { git = "https://github.com/wyatt-A/cfl.git", features = ["linalg-mkl-static", "nifti-dump"] }
+dwt = { git = "https://github.com/wyatt-A/dwt.git" }
 clap = { version = "4.5.29", features = ["derive"] }
 glob = "0.3.2"
 rand = "0.9.0"
